Adding / Updating testimonials section on each class page

--- a/index.html
+++ b/index.html
@@ -575,19 +575,19 @@
       <h2>Testimonials</h2>
       <div class="testimonials-section-container-inner">
         <div class="testimonial-card hidden">
-          <h3>Liam McBride</h3>
+          <h3>Liam</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great club with a great coach. A very friendly and encouraging environment to learn and grow, with a good selection of various martial arts on offer.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
-          <h3>Daniel McTigue</h3>
+          <h3>Daniel</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">I've been training here and love it! I was quite nervous starting but Ken is such a nice guy and everyone makes you feel so welcome! Would highly recommend!</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
-          <h3>Laurence Coleman</h3>
+          <h3>Laurence</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great place to start a martial art. Doesn’t matter what age you’ll find it fits perfectly in your life. It gives you a solid workout also a new and exciting discipline.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
