--- a/karate.html
+++ b/karate.html
@@ -381,6 +381,36 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials-section-container-outer">
+      <h2>Testimonials</h2>
+      <div class="testimonials-section-container-inner">
+        <div class="testimonial-card hidden">
+          <h3>Lucy</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Great, supportive atmosphere and friendly people. I've learned so much and gained confidence over the years. Definitely one of the best sports I've done—highly recommend!</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Liam</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Great club with great coaches. A very friendly and encouraging environment to learn and grow.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Robert</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Very nice place with friendly staff. If you looking for any activities for your child including kids with disabilty (kickboxing,Kempo Karate and more) this is for you.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+      </div>
+      <div class="shape-divider-bottom">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-1"></path>
+        </svg>
+      </div>
+    </section>
+
     <!-- FAQ Section -->
     <section class="faq-section-container-outer" id="faqs">
       <h2>FAQ's</h2>
