--- a/bjj.html
+++ b/bjj.html
@@ -388,6 +388,36 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials-section-container-outer">
+      <h2>Testimonials</h2>
+      <div class="testimonials-section-container-inner">
+        <div class="testimonial-card hidden">
+          <h3>Carl</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Great community of people and a fun place to learn BJJ. I’d definitely recommend it!</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Ruth</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Love this place! Classes are excellent and Ken is a superb teacher. Great teaching and support.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Stroboforbs</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Training here has been fantastic. The coaches are clear and supportive, and there's always something new to learn.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+      </div>
+      <div class="shape-divider-bottom">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-1"></path>
+        </svg>
+      </div>
+    </section>
+
     <!-- FAQ Section -->
     <section class="faq-section-container-outer" id="faqs">
       <h2>FAQ's</h2>
