--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -372,6 +372,36 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials-section-container-outer">
+      <h2>Testimonials</h2>
+      <div class="testimonials-section-container-inner">
+        <div class="testimonial-card hidden">
+          <h3>Niamh</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">My kids love the Korean kickboxing classes. The instructors are fantastic and the classes are fun. It's a great way for them to stay active</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Tom</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Such a great experience for kids! The classes are both challenging and fun, and my child has really enjoyed improved their confidence.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Mark</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">They play lots of games and my child has made great friends. It’s a fantastic way to keep them active and engaged!</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+      </div>
+      <div class="shape-divider-bottom">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-1"></path>
+        </svg>
+      </div>
+    </section>
+
     <!-- FAQ Section -->
     <section class="faq-section-container-outer" id="faqs">
       <h2>FAQ's</h2>
