--- a/muay-thai.html
+++ b/muay-thai.html
@@ -382,6 +382,36 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials-section-container-outer">
+      <h2>Testimonials</h2>
+      <div class="testimonials-section-container-inner">
+        <div class="testimonial-card hidden">
+          <h3>Damian</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">The Muay Thai classes here are fantastic! Paul is a great instructor and the training is both challenging and fun. Highly recommend!</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Sara</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">I've learned so much since joining the Muay Thai class. Great atmosphere and supportive coaching make every session enjoyable.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>João</h3>
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">This Muay Thai class is top-notch! It's a great workout, and the instructors really know their stuff.</p>
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+        </div>
+      </div>
+      <div class="shape-divider-bottom">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-1"></path>
+        </svg>
+      </div>
+    </section>
+
     <!-- FAQ Section -->
     <section class="faq-section-container-outer" id="faqs">
       <h2>FAQ's</h2>
