--- a/karate.html
+++ b/karate.html
@@ -400,7 +400,7 @@
         <div class="testimonial-card hidden">
           <h3>Robert</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Very nice place with friendly staff. If you looking for any activities for your child including kids with disabilty (kickboxing,Kempo Karate and more) this is for you.</p>
+          <p class="testimonial-review">Very nice place with friendly staff. If you looking for any activities for your child including kids with disabilty this is for you.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
       </div>
