Adding keywords to the reviews

--- a/bjj.html
+++ b/bjj.html
@@ -401,13 +401,13 @@
         <div class="testimonial-card hidden">
           <h3>Ruth</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Love this place! Classes are excellent and Ken is a superb teacher. Great teaching and support.</p>
+          <p class="testimonial-review">Love this place! Brazilian Jiu-Jitsu classes are excellent and Ken is a superb teacher. Great teaching and support.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Stroboforbs</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Training here has been fantastic. The coaches are clear and supportive, and there's always something new to learn.</p>
+          <p class="testimonial-review">Training BJJ here has been fantastic. The coaches are clear and supportive, and there's always something new to learn.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
       </div>
