--- a/kickboxing.html
+++ b/kickboxing.html
@@ -379,7 +379,7 @@
         <div class="testimonial-card hidden">
           <h3>Edie</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Been here for ten years, earned two black belts, and made great friends. Ken is a fantastic, supportive instructor. This club has boosted my confidence and self-defense skills. Highly recommend!</p>
+          <p class="testimonial-review">Been in Kickboxing for ten years, earned my black belt, and made great friends. Ken is a fantastic, supportive instructor. This club has boosted my confidence and self-defense skills. Highly recommend!</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
