--- a/karate.html
+++ b/karate.html
@@ -388,19 +388,19 @@
         <div class="testimonial-card hidden">
           <h3>Lucy</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Great, supportive atmosphere and friendly people. I've learned so much and gained confidence over the years. Definitely one of the best sports I've done—highly recommend!</p>
+          <p class="testimonial-review">Great, supportive atmosphere and friendly people. I've learned so much and gained confidence from these Karate classes. Definitely one of the best sports I've done—highly recommend!</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Liam</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Great club with great coaches. A very friendly and encouraging environment to learn and grow.</p>
+          <p class="testimonial-review">Great club with great Karate coaches. A very friendly and encouraging environment to learn and grow.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Robert</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
-          <p class="testimonial-review">Very nice place with friendly staff. If you looking for any activities for your child including kids with disabilty this is for you.</p>
+          <p class="testimonial-review">Very nice place with friendly staff. If you looking for any Karate classes for your child including kids with a disabilty, this is for you.</p>
           <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
       </div>
