--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
- <!-- Schema Markup LocalBusiness with SportsActivityLocation -->
- <script type="application/ld+json">
+ <!-- Schema Markup for SportsActivityLocation -->
+<script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": ["LocalBusiness", "SportsActivityLocation"],
+    "@type": "SportsActivityLocation",
     "name": "Golden Tiger Academy",
     "image": "https://goldentigeracademy.com/apple-touch-icon.png",
     "address": {
@@ -197,43 +197,6 @@
     },
     "telephone": "+353 87 233 3481",
     "url": "https://goldentigeracademy.com/",
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "5.0",
-      "reviewCount": "28"
-    },
-    "review": [
-      {
-        "@type": "Review",
-        "author": "Liam McBride",
-        "datePublished": "2024-01-05",
-        "reviewBody": "Great club with a great coach. A very friendly and encouraging environment to learn and grow, with a good selection of various martial arts on offer.",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5"
-        }
-      },
-      {
-        "@type": "Review",
-        "author": "Ruth Weest",
-        "datePublished": "2024-08-15",
-        "reviewBody": "Love this place! Classes are excellent and Ken is a superb teacher. Great teaching and support.",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5"
-        }
-      },
-      {
-        "@type": "Review",
-        "author": "Snizhana Tykhonova",
-        "datePublished": "2024-09-04",
-        "reviewBody": "Here you can learn a lot, for example, how to protect yourself, you can learn to fight, I want to say a few words about this place, here all the students are sociable and friendly, when you need help you can contact any student and they will help you, as well as a trainer who ready to train you day and evening, this place has become a second home for me, so I advise everyone to visit Golden Tiger Academy",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5"
-        }
-      }
-    ],
     "openingHours": [
       "Mo 18:00-21:00",
       "Tu 18:00-21:00",
@@ -290,6 +253,64 @@
     }
   }
   </script>
+
+  <!-- Schema Markup for Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Golden Tiger Academy",
+    "url": "https://goldentigeracademy.com/",
+    "logo": "https://goldentigeracademy.com/apple-touch-icon.png",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5.0",
+      "reviewCount": "28"
+    },
+    "review": [
+      {
+        "@type": "Review",
+        "author": {
+          "@type": "Person",
+          "name": "Liam McBride"
+        },
+        "datePublished": "2024-01-05",
+        "reviewBody": "Great club with a great coach. A very friendly and encouraging environment to learn and grow, with a good selection of various martial arts on offer.",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        }
+      },
+      {
+        "@type": "Review",
+        "author": {
+          "@type": "Person",
+          "name": "Ruth West"
+        },
+        "datePublished": "2024-08-15",
+        "reviewBody": "Love this place! Classes are excellent and Ken is a superb teacher. Great teaching and support.",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        }
+      },
+      {
+        "@type": "Review",
+        "author": {
+          "@type": "Person",
+          "name": "Snizhana Tykhonova"
+        },
+        "datePublished": "2024-09-04",
+        "reviewBody": "Here you can learn a lot, for example, how to protect yourself, you can learn to fight, I want to say a few words about this place, here all the students are sociable and friendly, when you need help you can contact any student and they will help you, as well as a trainer who ready to train you day and evening, this place has become a second home for me, so I advise everyone to visit Golden Tiger Academy",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        }
+      }
+    ]
+  }
+  </script>
+
 
 
 
@@ -600,7 +621,8 @@
       </div>
     </section>
 
- <!-- Shop Section -->
+
+    <!-- Shop Section -->
  <section class="shop-section-container-outer" id="shop">
   <h2>GTA Store</h2>
   <div class="testimonials-section-container-inner">
