Updating SEO meta descriptions for all class pages

--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -246,7 +246,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover the exhilarating world of Korean Kickboxing at Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt, our classes offer a unique blend of Korean Kickboxing techniques tailored for young warriors. Join us to empower your kids with confidence, dynamic techniques, and the energy of Korean Kickboxing!" />
+    <meta name="description" content="Try Korean Kickboxing with your first class free! Fun, dynamic classes for kids to build confidence and learn unique techniques in a supportive environment." />
     <title>Korean Kickboxing Classes for Kids in Dunboyne, Meath</title>
   </head>
   <body id="class-korean-kickboxing-body">
