--- a/bjj.html
+++ b/bjj.html
@@ -246,7 +246,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover the art of Brazilian Jiu-Jitsu at Golden Tiger Academy in Dunboyne. Our expert instructors offer classes for all ages and levels, from beginners to advanced practitioners. Whether you're a kid, fitness enthusiast, or self-defense seeker, join us to unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
+    <meta name="description" content="Your first Brazilian Jiu-Jitsu class is free! Learn self-defense, boost fitness, and train with expert instructors in a supportive setting." />
     <title>Brazilian Jiu-Jitsu (BJJ) Classes in Dunboyne, Meath</title>
   </head>
   <body id="class-bjj-body">
