--- a/kickboxing.html
+++ b/kickboxing.html
@@ -246,7 +246,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Elevate your fitness game with exhilarating kickboxing classes at Golden Tiger Academy in Dunboyne. From beginners to seasoned athletes, our dynamic sessions cater to all skill levels, blending technique, strength, and cardio for a full-body workout. Join our supportive community and unleash your potential with kickboxing." />
+    <meta name="description" content="Try kickboxing with your first class free! Dynamic sessions for all levels, blending technique, strength, and cardio for a full-body workout." />
     <title>Learn Kickboxing Techniques from Experts in Dunboyne, Meath.</title>
   </head>
   <body id="class-kickboxing-body">
