--- a/muay-thai.html
+++ b/muay-thai.html
@@ -246,7 +246,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore the world of Muay Thai at Golden Tiger Academy in Dunboyne. Our skilled instructors provide classes tailored to individuals of all ages and skill levels, from novices to seasoned practitioners. Whether you're a beginner or an advanced student, our classes cater to your needs. Join us to enhance your fitness, learn self-defense techniques, and build confidence in a welcoming environment. Start your Muay Thai journey today at Golden Tiger Academy Dunboyne." />
+    <meta name="description" content="Try Muay Thai with your first class free! Expert-led sessions for all ages and skill levels to boost fitness, confidence, and self-defense skills." />
     <title>Learn Muay Thai Kickboxing Techniques in Dunboyne, Meath</title>
   </head>
   <body id="class-muay-thai-body">
