--- a/bjj.html
+++ b/bjj.html
@@ -516,7 +516,7 @@
               <span class="sr-only">Instagram</span>
             </a>
 
-            <a href="/contact-us">
+            <a href="./contact-us">
               <i class="fa fa-envelope"></i>
               <span class="sr-only">Email Us Now</span>
             </a>
@@ -525,6 +525,7 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
+          <a href="/blog/index.html" class="designed-by">Read our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
