--- a/contact-us.html
+++ b/contact-us.html
@@ -224,6 +224,7 @@
 
     <section class="contact-us-container-outer">
       <div class="contact-us-container-inner">
+        <!-- Emails are  sent to goldentigeracademy@gmail.com -->
         <!-- Contact Form -->
         <form class="form" action="https://api.web3forms.com/submit" method="POST">
           <input type="hidden" name="access_key" value="c1682ada-8ba6-43bd-9ec3-f8d292080cc2" />
@@ -299,6 +300,7 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
+          <a href="/blog/index.html" class="designed-by">Read our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
