--- a/kung-fu.html
+++ b/kung-fu.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Hide this page from being crawled by Google -->
+    <meta name="robots" content="noindex" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9222579198944867" crossorigin="anonymous"></script>
     <!-- Google Tag Manager -->
     <script>
@@ -365,6 +367,7 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
+          <a href="/blog/index.html" class="designed-by">Read our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
