--- a/thank-you.html
+++ b/thank-you.html
@@ -286,6 +286,7 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
+          <a href="/blog/index.html" class="designed-by">Read our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
