--- a/gallery.html
+++ b/gallery.html
@@ -215,7 +215,7 @@
               <li><a href="./#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="./#faqs" class="nav-link">FAQs</a></li>
               <li><a href="./#timetable" class="nav-link">Timetable</a></li>
-              <li><a href="./gallery" class="nav-link">Gallery</a></li>
+              <li><a href="./gallery.html" class="nav-link">Gallery</a></li>
               <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
@@ -283,6 +283,7 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
+          <a href="/blog/index.html" class="designed-by">Read our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
