--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Hide this page from being crawled by Google -->
+    <meta name="robots" content="noindex" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9222579198944867" crossorigin="anonymous"></script>
     <!-- Google Tag Manager -->
     <script>
