Footer - improving accessibility
Increasing distance between elements

--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,9 @@
           </div>
         </div>
 
+
+
+
         <div class="social-media-container">
           <div class="social-media-icons">
             <a href="https://www.facebook.com/goldentigeracademy/" target="_blank">
@@ -1120,7 +1123,8 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
-          <a href="/blog" class="designed-by">Read our blog</a>
+
+          <a href="/blog" class="read-blog">check out our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
