--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -244,25 +244,25 @@
         <div class="benefits-text-container">
           <h2>What makes us special</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="Self-Defense Icon" />
+            <img src="/images/icon-self-defense.webp" class="class-icon" alt="Self-Defense Icon" />
             <h3>Exciting and Fun Classes</h3>
             <p>Learn from Ken Byrne, our head instructor and a black belt with over 38 years of experience in Kenpo Karate, tailored specifically for kids.</p>
           </div>
 
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="Self-Defense Icon" />
+            <img src="/images/icon-self-defense.webp" class="class-icon" alt="Self-Defense Icon" />
             <h3>Practical Self-Defense</h3>
             <p>Develop essential self-defense techniques designed for real-life scenarios, empowering kids to protect themselves and others.</p>
           </div>
 
           <div class="benefits">
-            <img src="./images/icon-fitness.webp" class="class-icon" alt="Fitness Icon" />
+            <img src="/images/icon-fitness.webp" class="class-icon" alt="Fitness Icon" />
             <h3>Fitness and Agility</h3>
             <p>Improve cardiovascular health, strength, flexibility, and agility through engaging Kenpo Karate exercises tailored to kids' fitness needs.</p>
           </div>
 
           <div class="benefits">
-            <img src="./images/icon-community.webp" class="class-icon" alt="Community Icon" />
+            <img src="/images/icon-community.webp" class="class-icon" alt="Community Icon" />
             <h3>Inclusive Community</h3>
             <p>Join our supportive Kenpo Karate community where kids make friends, share their progress, and encourage each other to excel.</p>
           </div>
