--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             </div>
           </div>
         </div>
-        <img class="hero-image-container" src="./images/hero-img.svg" alt="Black belt throwing a white belt with a sumi gaeshi" />
+        <img class="hero-image-container" src="./images/hero-img.svg" width="584" height="400" alt="Black belt throwing a white belt with a sumi gaeshi" />
       </section>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -507,12 +507,11 @@
 <section class="about-us-section-container-outer" id="about-us">
   <div class="about-us-section-container-inner">
     <picture class="about-us-image">
-      <!-- Large screen variant -->
       <source srcset="/images/about-us-large.webp" media="(min-width: 1024px)">
-      <!-- Medium screen variant -->
       <source srcset="/images/about-us-medium.webp" media="(min-width: 768px)">
-      <!-- Small screen fallback -->
-      <img src="/images/about-us-small.webp" alt="Ken Byrne Receiving His BJJ Black Belt">
+      <img src="/images/about-us-small.webp"
+           alt="Ken Byrne Receiving His BJJ Black Belt"
+           width="552" height="437">
     </picture>
     <div class="about-us-text">
       <h2>About Us</h2>
@@ -605,21 +604,21 @@
       <div class="testimonials-section-container-inner">
         <div class="testimonial-card hidden">
           <h3>Liam</h3>
-          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <img src="./images/icon-5-stars.webp" height="17" width="96" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great club with a great coach. A very friendly and encouraging environment to learn and grow, with a good selection of various martial arts on offer.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" height="20" width="40" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Daniel</h3>
-          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <img src="./images/icon-5-stars.webp" height="17" width="96" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">I've been training here and love it! I was quite nervous starting but Ken is such a nice guy and everyone makes you feel so welcome! Would highly recommend!</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" height="20" width="40" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Laurence</h3>
-          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
+          <img src="./images/icon-5-stars.webp" height="17" width="96" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great place to start a martial art. Doesn’t matter what age you’ll find it fits perfectly in your life. It gives you a solid workout also a new and exciting discipline.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" height="20" width="40" alt="" class="icon-google" />
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -1029,7 +1028,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title">Do I need any prior experience to join your martial arts classes?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" height="30" width="31" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span> Whether you're a complete beginner or have some experience in martial arts, our classes are designed to accommodate individuals of all backgrounds. Our instructors will tailor their guidance to meet your specific needs, ensuring that you receive the support necessary to improve. </span></p>
@@ -1038,7 +1037,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">Do I need to be in shape before starting a martial art?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" height="30" width="31" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>No, martial arts is for people of all fitness levels. Our classes are designed to accommodate beginners and gradually build strength, flexibility, and endurance over time.</span></p>
@@ -1046,7 +1045,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">What's the youngest age kids can start martial arts?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" height="30" width="31" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, Korean Kickboxing, and Kenpo Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
