SEO CLS - Giving images explicit size

--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What should I wear and bring to my first martial arts class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" height="30" width="31" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!</span></p>
@@ -1063,7 +1063,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">Do you offer private lessons / group lessons?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" height="30" width="31" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we provide one-to-one private lessons. Additionally, we offer small group sessions that can be customized for specific groups, such as women's only sessions, ensuring a comfortable and supportive environment for all participants.</span></p>
@@ -1071,7 +1071,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Are your instructors certified and experienced?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" height="30" width="31" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
