SEO - Optimising hero image

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             </div>
           </div>
         </div>
-        <img class="hero-image-container" src="./images/hero-img.svg" width="584" height="400" alt="Black belt throwing a white belt with a sumi gaeshi" />
+        <img class="hero-image-container" src="./images/hero-img.webp" width="584" height="400" alt="Black belt throwing a white belt with a sumi gaeshi" />
       </section>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
