--- a/thank-you.html
+++ b/thank-you.html
@@ -285,7 +285,7 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
-          <a href="/blog" class="designed-by">Read our blog</a>
+          <a href="/blog" class="read-blog">check out our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
