--- a/404.html
+++ b/404.html
@@ -215,7 +215,7 @@
           <p>The page you're looking for is doing its best impression of a ninja - gone without a trace! Let's track down what you're looking for.</p>
           <a href="/" class="cta-error">Back to Homepage</a>
         </div>
-        <img src="./images/404-page-error.webp" class="error-404-ninja" alt="A Ninja unplugging a plug for it's socket" />
+        <img src="/images/404-page-error.webp" class="error-404-ninja" alt="A Ninja unplugging a plug for it's socket" />
       </div>
     </div>
   </body>
