--- a/bjj.html
+++ b/bjj.html
@@ -246,7 +246,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Your first Brazilian Jiu-Jitsu class is free! Learn self-defense, boost fitness, and train with expert instructors in a supportive setting." />
-    <title>Brazilian Jiu-Jitsu (BJJ) Classes in Dunboyne, Meath</title>
+    <title>Brazilian Jiu-Jitsu (BJJ) in Dunboyne, Meath – Beginner to Advanced Classes</title>
   </head>
   <body id="class-bjj-body">
     <!-- Google Tag Manager (noscript) -->
