--- a/karate.html
+++ b/karate.html
@@ -246,7 +246,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Start Karate with your first class free! Expert instructors for all ages and skill levels, focusing on fitness, self-defense, and confidence." />
-    <title>Beginner to Advanced Karate Lessons in Dunboyne, Meath</title>
+    <title>Karate Classes in Dunboyne, Meath – Beginner to Advanced</title>
   </head>
   <body id="class-karate-body">
     <!-- Google Tag Manager (noscript) -->
