--- a/kickboxing.html
+++ b/kickboxing.html
@@ -246,7 +246,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Try kickboxing with your first class free! Dynamic sessions for all levels, blending technique, strength, and cardio for a full-body workout." />
-    <title>Learn Kickboxing Techniques from Experts in Dunboyne, Meath.</title>
+    <title>Kickboxing Classes in Dunboyne, Meath – Learn Techniques from Experts</title>
   </head>
   <body id="class-kickboxing-body">
     <!-- Google Tag Manager (noscript) -->
