--- a/muay-thai.html
+++ b/muay-thai.html
@@ -246,7 +246,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Try Muay Thai with your first class free! Expert-led sessions for all ages and skill levels to boost fitness, confidence, and self-defense skills." />
-    <title>Learn Muay Thai Kickboxing Techniques in Dunboyne, Meath</title>
+    <title>Muay Thai Kickboxing in Dunboyne, Meath – Learn from the Experts</title>
   </head>
   <body id="class-muay-thai-body">
     <!-- Google Tag Manager (noscript) -->
