SEO - adding alt text to images

--- a/index.html
+++ b/index.html
@@ -507,11 +507,9 @@
 <section class="about-us-section-container-outer" id="about-us">
   <div class="about-us-section-container-inner">
     <picture class="about-us-image">
-      <source srcset="/images/about-us-large.webp" media="(min-width: 1024px)">
-      <source srcset="/images/about-us-medium.webp" media="(min-width: 768px)">
-      <img src="/images/about-us-small.webp"
-           alt="Ken Byrne Receiving His BJJ Black Belt"
-           width="552" height="437">
+      <source srcset="/images/about-us-large.webp" media="(min-width: 1024px)" alt="Ken Byrne Receiving His BJJ Black Belt">
+      <source srcset="/images/about-us-medium.webp" media="(min-width: 768px)" alt="Ken Byrne Receiving His BJJ Black Belt">
+      <img src="/images/about-us-small.webp" alt="Ken Byrne Receiving His BJJ Black Belt" width="552" height="437">
     </picture>
     <div class="about-us-text">
       <h2>About Us</h2>
